--- a/wp-content/themes/octiv2017/src/scss/module/_footer.scss
+++ b/wp-content/themes/octiv2017/src/scss/module/_footer.scss
@@ -2,6 +2,7 @@
   background-color: $gray;
   color: darken($white, 25%);
   padding: 2rem 0 0;
+  margin-top: -1.5rem;
   @include tablet {
     padding: 3rem 0 0;
   }
